// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing required should fail if required does not exist 1`] = `
Array [
  400,
]
`;

exports[`testing required should fail if required does not exist 2`] = `
Array [
  Object {
    "error": "required",
    "success": false,
  },
]
`;

exports[`testing sameAs should fail if fields are the same 1`] = `
Array [
  400,
]
`;

exports[`testing sameAs should fail if fields are the same 2`] = `
Array [
  Object {
    "error": "sameAs",
    "success": false,
  },
]
`;

exports[`testing validModel should fail if fields are the same 1`] = `
Array [
  400,
]
`;

exports[`testing validModel should fail if fields are the same 2`] = `
Array [
  Object {
    "error": "validModel",
    "success": false,
  },
]
`;
